# ConceptioMsgs

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: conceptio_bridges_submodule_pr.yml  conceptio_core_submodule_pr.yml  submodule_update.yml
conceptio_msgs/: package.xml
conceptio_msgs/msg/: WARAPSHeartbeat
msg/: ArenaEntities.msg  ArenaHeartbeat.msg  ArenaKinematics.msg
srv/: RequestArenaEntityList.srv
